--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "django-extensions>=3.1.1",
+    "ipython>=9.4.0",
+]
 
 [dependency-groups]
 dev = [
